feat: implement subscription, payment integration (SePay), mock server, workspace AI, and security updates